tests/ui/eii/wrong_ret_ty.stderr
error[E0806]: function `other` has a type that is incompatible with the declaration of `#[foo]`
  --> $DIR/wrong_ret_ty.rs:17:18
   |
LL | fn other(_x: u64) {
   |                  ^ expected `u64`, found `()`
   |
note: expected this because of this attribute
  --> $DIR/wrong_ret_ty.rs:16:1
   |
LL | #[foo]
   | ^^^^^^
note: type in declaration
  --> $DIR/wrong_ret_ty.rs:13:28
   |
LL |     safe fn bar(x: u64) -> u64;
   |                            ^^^
   = note: expected signature `fn(_) -> u64`
              found signature `fn(_) -> ()`
help: change the output type to match the declaration
   |
LL | fn other(_x: u64) -> u64 {
   |                   ++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0806`.
